--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'info.androidhive:imagefilters:1.0.7'
     implementation 'ja.burhanrashid52:photoeditor:0.3.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
 
 
 }
