--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,9 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Detail_Activity"
-                  android:theme="@style/AppTheme.NoActionBar.Fullscreen">
+        <activity android:name=".Main_Menu"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
 
+
+        </activity>
+        <activity
+            android:name=".Detail_Activity"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
 
         </activity>
         <activity
