--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main_Menu"
+        <activity android:name=".ShowActivity"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen">
+
 
 
         </activity>
         <activity
-            android:name=".Detail_Activity"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
+            android:name=".Main_Menu"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +30,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Detail_Activity"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
+
+
+        </activity>
+        <activity
+            android:name=".PageMyMural"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+        <activity
+            android:name=".PageAllMural"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+        <activity
+            android:name=".PageFliter"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+
     </application>
 
 </manifest>
