--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShowActivity"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
-
-
-
-        </activity>
+        <activity android:name=".Filter"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"
+            ></activity>
+        <activity
+            android:name=".ShowActivity"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
         <activity
             android:name=".Main_Menu"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen">
@@ -32,23 +32,19 @@
         </activity>
         <activity
             android:name=".Detail_Activity"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
-
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
         <activity
             android:name=".PageMyMural"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".PageAllMural"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".PageFliter"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
     </application>
 
 </manifest>
