--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Filter"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"
-            ></activity>
+        <activity android:name=".login"></activity>
+        <activity
+            android:name=".Filter"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".ShowActivity"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".Main_Menu"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen">
@@ -35,7 +36,7 @@
             android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen"></activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".PageMyMural"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
