--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,9 +34,7 @@
             android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".Main_Menu"
-            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
         <activity
             android:name=".Detail_Activity"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
